<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#212121"
    tools:context=".Controller.SupportActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_support"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#424242"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/support"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <!-- Nội dung -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Hướng dẫn cơ bản -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:textColor="@android:color/white"
                    android:textStyle="italic"
                    android:textSize="18sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_instructions"
                android:textColor="#CCCCCC"
                android:layout_marginTop="8dp"
                android:textSize="16sp" />

            <!-- Các tính năng -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_features"
                android:textColor="#CCCCCC"
                android:layout_marginTop="8dp"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
