<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#212121"
    tools:context=".Controller.SettingsActivity"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#424242"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/settings"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </LinearLayout>

    <!-- Nội dung -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Ngôn ngữ -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                >

                <!-- Tiếng Việt -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="12dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="#FFFFFF"
                    android:elevation="2dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/vn_language">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vietnamese"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <ImageView
                            android:id="@+id/icon_vn_check"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:visibility="visible"
                            android:src="@drawable/ic_check"
                            android:contentDescription=""
                            app:tint="@android:color/holo_green_light"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </RelativeLayout>

                <!-- English -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="12dp"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="2dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/en_language">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <ImageView
                            android:id="@+id/icon_en_check"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:visibility="visible"
                            android:src="@drawable/ic_check"
                            android:contentDescription=""
                            app:tint="@android:color/holo_green_light"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>
            </LinearLayout>

            <!-- Âm thanh -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_volume"
                    android:layout_marginEnd="12dp"
                    app:tint="@android:color/white" />

                <SeekBar
                    android:id="@+id/volume_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progress="50"
                    android:thumbTint="#FFFFFF"
                    android:progressTint="#FFFFFF"
                    android:max="100"/>
            </LinearLayout>
            <TextView
                android:id="@+id/volumeText"
                android:textColor="@color/white"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:shadowColor="@color/white"
                android:id="@+id/logout_btn"
                android:textSize="20dp"
                android:text="@string/logout"
                android:background="@drawable/rounded_corner"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>